====================
Bazaar Release Notes
====================

.. contents::

IN DEVELOPMENT
==============

  CHANGES:
   
  FEATURES:

  IMPROVEMENTS:

   * ``bzr pack`` now orders revision texts in topological order, with newest
     at the start of the file, promoting linear reads for ``bzr log`` and the
     like. This partially fixes #154129. (Robert Collins)

  BUGFIXES:

   * Fix Makefile rules for doc generation. (Ian Clatworthy, #175207)

   * ``uncommit`` works even when the commit messages of revisions to be
     removed use characters not supported in the terminal encoding.
     (Aaron Bentley)

  INTERNALS:

  API BREAKS:

  TESTING:


bzr 1.0rc2 2007-12-07
=====================

  CHANGES:
   
   * If a traceback occurs, users are now asked to report the bug 
     through Launchpad (https://bugs.launchpad.net/bzr/), rather than 
     by mail to the mailing list.
     (Martin Pool)

  IMPROVEMENTS:

   * Added a --coverage option to selftest. (Andrew Bennetts)

   * ``bzr commit`` now doesn't print the revision number twice. (Matt
     Nordhoff, #172612)

   * New configuration option ``bugtracker_<tracker_abbrevation>_url`` to
     define locations of bug trackers that are not directly supported by
     bzr or a plugin. The URL will be treated as a template and ``{id}``
     placeholders will be replaced by specific bug IDs.  (Lukáš Lalinský)

   * Support logging single merge revisions with short and line log formatters.
     (Kent Gibson)

   * User Guide enhanced with suggested readability improvements from
     Matt Revell and corrections from John Arbash Meinel. (Ian Clatworthy)

   * Quick Start Guide renamed to Quick Start Card, moved down in
     the catalog, provided in pdf and png format and updated to refer
     to ``send`` instead of ``bundle``. (Ian Clatworthy, #165080)

   * ``switch`` can now be used on heavyweight checkouts as well as
     lightweight ones. After switching a heavyweight checkout, the